sass/_container.scss
.container {
	display: flex;

	border-radius: 15px;
	-webkit-box-shadow: 0px 55px 61px -55px rgba(0, 0, 0, 0.34);
	-moz-box-shadow: 0px 55px 61px -55px rgba(0, 0, 0, 0.34);
	box-shadow: 0px 55px 61px -55px rgba(0, 0, 0, 0.34);
	background-color: #fff;

	height: 37rem;
	width: 50%;
}

